@@ -131,11 +131,11 @@ cd ~/downloads
 </pre>
 
 <p>
-Download the source code tarballs of both Nagios and the Nagios plugins (visit <a href="http://www.nagios.org/download/">http://www.nagios.org/download/</a> for links to the latest versions).  At the time of writing, the latest versions of Nagios and the Nagios plugins were 3.0b7 and 1.4.7, respectively.
+Download the source code tarballs of both Nagios and the Nagios plugins (visit <a href="http://www.nagios.org/download/">http://www.nagios.org/download/</a> for links to the latest versions).  At the time of writing, the latest versions of Nagios and the Nagios plugins were 3.0rc1 and 1.4.7, respectively.
 </p>
 
 <pre>
-wget http://osdn.dl.sourceforge.net/sourceforge/nagios/nagios-3.0b7.tar.gz
+wget http://osdn.dl.sourceforge.net/sourceforge/nagios/nagios-3.0rc1.tar.gz
 wget http://osdn.dl.sourceforge.net/sourceforge/nagiosplug/nagios-plugins-1.4.7.tar.gz
 </pre>
 
@@ -149,8 +149,8 @@ Extract the Nagios source code tarball.
 
 <pre>
 cd ~/downloads
-tar xzf nagios-3.0b7.tar.gz
-cd nagios-3.0b7
+tar xzf nagios-3.0rc1.tar.gz
+cd nagios-3.0rc1
 </pre>
 
 <p>
